finished rpsButtons, need to finish layout then incorporate logic.

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 body {
   background: radial-gradient(
-    circle at center,
+    circle at top,
     hsl(214, 47%, 23%),
     hsl(237, 49%, 15%)
   );
